refactor: added failures and fix a typo in sucess
