# app/gateway/web/account/get_balance.go
@@ -11,7 +11,9 @@ import (
 //@Description With a authorization token valid, return the balance of a account
 //@Produce json
 //@Param authorization header string true "Authorization Token"
-//@Sucess 200 {object} output.AccountBalanceVO
+//@Success 200 {object} output.AccountBalanceVO
+//@Failure	400 {object} output.OutputError
+//@Failure 500 {object} output.OutputError
 //@Router /account/balance [get]
 func (controller *Controller) GetBalance(w http.ResponseWriter, r *http.Request) {
 	tokenID, err := middleware.GetAccountIDFromToken(r, controller.tokenRepo)
